lustre/mdt/mdt_open.c
@@ -1174,6 +1174,8 @@ static int mdt_cross_open(struct mdt_thread_info *info,
 			if (rc != 0)
 				GOTO(out, rc);
 
+			mdt_pack_secctx_in_reply(info, o);
+
 			rc = mdt_finish_open(info, NULL, o, open_flags, rep);
 		} else {
 			/*
@@ -1528,7 +1530,9 @@ again:
 			       PNAME(&rr->rr_name), PFID(child_fid));
 			GOTO(out_child, result = -EIO);
 		}
-        }
+	}
+
+	mdt_pack_secctx_in_reply(info, child);
 
 	rc = mdt_check_resent_lock(info, child, lhc);
 	if (rc < 0) {
